drop-down-button clipping fixed

--- a/modules.less
+++ b/modules.less
@@ -3576,7 +3576,7 @@ popover{
 }
 
 drop-down-button{
-	width: 150px;
+	min-width: 150px;
 	height: 40px;
 }
 
